2022-09-03
* Environment vars starting with "BB_" where renamed to "BIOBASH_"
2022-08-03
* New BIOBASH_OS variable added in setup_environment. Replaces BIOBASH_OS_osx/linux vars.
* bb_get_fasta_headers is used as started ponit to create a "model" script forfuther dev. 

2022-06-03
* Added unistallation script
* Fixed BIOBASH_BIN_OS issue that was not getting the path to OS specific binaries.

2022-05-03
* checkdependencies and installbiobash scripts are stable and perform the minimum necessary
validations as to be considered "stable".
* Create a tag with this version of BioBash.

2022-05-03
* installbiobash script was modified, so it performs basic install now. 

2021-12-15
* Stripped template bashrc. Left only strictly neccesary variables.

2021-12-05
* Added check dependencies script.
* Added seqtk installer.

2021-12-03
* Defined a new feedback function "say" on bb_native library.

2021-12-02
* Environmental variables now go harcoded on .bashrc file

2021-12-01
* General structure and a simple installation script added.
* Added wy around to source environmental variable file in all scripts.