@@ -1,31 +1,0 @@
-# This section was automatically added to your .bashrc file by the
-# BIOBASH installer on: 12-02-2021.
-# A copy of your original .bashrc file was created with name: .bashrc_12-02-2021
-
-# DO NOT modify below unless you are completely sure what you are doing
-# otherwise BIOBASH may not function at all.
-#
-
-BIOBASH_HOME=./
-BIOBASH_LIB=lib 
-BIOBASH_BIN=bin
-SHML_LIB=lib/shml/shml.sh
-BASHUTILITY_LIB_PATH=lib/bash-utility
-BASHUTILITY_LIB=lib/bash-utility/bash_utility.sh
-BASHUTILITY_LIB=lib/bash-utility/bash_utility.sh
-BB_NATIVE_LIB_PATH=lib/bb_native
-BB_NATIVE_LIB=lib/bb_native/bb_native.sh
-
-
-
-export BIOBASH_HOME
-export BIOBASH_LIB 
-export BIOBASH_BIN 
-export SHML_LIB
-export BASHUTILITY_LIB_PATH
-export BASHUTILITY_LIB
-export BB_NATIVE_LIB_PATH
-export BB_NATIVE_LIB
-
-
-
