@@ -1,2 +1,3 @@
 #!/usr/bin/env bash
-source $BB_NATIVE_LIB_PATH/feedback.sh
+source $BIOBASH_NATIVE_LIB_PATH/feedback.sh
+source $BIOBASH_NATIVE_LIB_PATH/validate.sh
