@@ -1,0 +1,2 @@
+AGTGCTGTGACGACTAGCGCGCTGACGACTAGCTAGCAGCTAGCACGACGACTAC
+GGTGCTGTGACGACTGACTAGCGCGAGCTACGTTTTTACGCTAGCTAGCTACGAC
